projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/SecurityScanRun__c.object-meta.xml
<CustomObject>
    <description>Records one complete execution of the Org Security Scanner. Created each time an admin clicks Run Security Check. Parent to all SecurityFinding__c records for that scan run. Automatically deleted when beyond the configured retention limit.</description>
    <label>Security Scan Run</label>
    <nameField>
        <displayFormat>SCAN-{0000}</displayFormat>
        <label>Scan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Scan Runs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>