projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/CompletedAt__c.field-meta.xml
<CustomField>
    <fullName>CompletedAt__c</fullName>
    <description>Set by the final Queueable job when all categories have run.</description>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>