projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/CompletedCategories__c.field-meta.xml
<CustomField>
    <fullName>CompletedCategories__c</fullName>
    <description>Comma-delimited category codes that completed successfully (e.g. UA,GU,SRA). Each runner appends its code on success. Polled by UI to render the 13-item scan progress checklist.</description>
    <label>Completed Categories</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>