projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/CriticalCount__c.field-meta.xml
<CustomField>
    <fullName>CriticalCount__c</fullName>
    <description>Count of Critical severity findings. Drives score ring color and header badge.</description>
    <label>Critical Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>