projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/ErrorDetails__c.field-meta.xml
<CustomField>
    <fullName>ErrorDetails__c</fullName>
    <description>Full Apex exception text from failed runners for debugging. Format per entry: [CategoryCode] ExceptionType: message\nStackTrace\n---\n. Truncated at 32,000 chars.</description>
    <label>Error Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>