projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <description>A/B/C/D/F grade computed from Score__c by finalizeScan(). Stored so historical grades do not retroactively change if grade thresholds ever change.</description>
    <label>Security Grade</label>
    <length>1</length>
    <type>Text</type>
</CustomField>