projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/HighCount__c.field-meta.xml
<CustomField>
    <fullName>HighCount__c</fullName>
    <description>Count of High severity findings for this scan run.</description>
    <label>High Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>