projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/InfoCount__c.field-meta.xml
<CustomField>
    <fullName>InfoCount__c</fullName>
    <description>Count of Informational severity findings for this scan run.</description>
    <label>Info Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>