projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/IsPartialScan__c.field-meta.xml
<CustomField>
    <fullName>IsPartialScan__c</fullName>
    <description>True when the scan was run by a user without a System Administrator profile. Some Tooling API results may be incomplete.</description>
    <inlineHelpText>Checked when the scan was run by a user without a System Administrator profile. Some Tooling API queries may return incomplete results. Re-run as a System Administrator for full coverage.</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Is Partial Scan</label>
    <type>Checkbox</type>
</CustomField>