projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/IsProductionScan__c.field-meta.xml
<CustomField>
    <fullName>IsProductionScan__c</fullName>
    <description>True when the scan ran against a production org (Organization.IsSandbox = false). UI shows a red PRODUCTION badge on this run in history and the dashboard.</description>
    <defaultValue>false</defaultValue>
    <label>Is Production Scan</label>
    <type>Checkbox</type>
</CustomField>