projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/LowCount__c.field-meta.xml
<CustomField>
    <fullName>LowCount__c</fullName>
    <description>Count of Low severity findings for this scan run.</description>
    <label>Low Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>