projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/MediumCount__c.field-meta.xml
<CustomField>
    <fullName>MediumCount__c</fullName>
    <description>Count of Medium severity findings for this scan run.</description>
    <label>Medium Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>