projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <description>UserInfo.getOrganizationId() - identifies which org was scanned.</description>
    <inlineHelpText>Salesforce Organization ID of the org that was scanned. Used to identify which environment this run belongs to when reviewing historical data.</inlineHelpText>
    <label>Org Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>