projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Security score 0-100 computed by finalizeScan(). Stored as source of truth for history and export. Prevents retroactive score shifts when CMT deduction weights are later edited.</description>
    <label>Security Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>