projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/StartedAt__c.field-meta.xml
<CustomField>
    <fullName>StartedAt__c</fullName>
    <description>Scan start timestamp for duration calculation.</description>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>