projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/StartedBy__c.field-meta.xml
<CustomField>
    <fullName>StartedBy__c</fullName>
    <description>Which admin initiated the scan.</description>
    <label>Started By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Security Scan Runs (Started By)</relationshipLabel>
    <relationshipName>SecurityScanRunsStartedBy</relationshipName>
    <type>Lookup</type>
</CustomField>