projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Drives UI state machine and polling termination. Cancelled = admin requested stop; chain checks this before each category and halts without enqueuing next link.</description>
    <inlineHelpText>Pending: scan is queued. Running: scan is in progress. Completed: all categories finished. Failed: scan could not complete. Cancelled: admin requested stop; scan halted at the next category boundary with partial results saved.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>