projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/TotalChecksRun__c.field-meta.xml
<CustomField>
    <fullName>TotalChecksRun__c</fullName>
    <description>Total number of individual security checks executed in this scan. Should be 76 on a full successful scan.</description>
    <inlineHelpText>Total number of individual security checks executed in this scan. Should be 76 on a full successful scan across all 13 categories.</inlineHelpText>
    <label>Total Checks Run</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>