projects/org-security-scanner/force-app/main/default/objects/SecurityScanRun__c/fields/TotalFindings__c.field-meta.xml
<CustomField>
    <fullName>TotalFindings__c</fullName>
    <description>Aggregate count of all findings across all severities for this scan run.</description>
    <label>Total Findings</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>